Added about me section

--- a/index.html
+++ b/index.html
@@ -34,11 +34,44 @@
                     <i class='bx bx-menu'></i>
                 </div>
             </nav>
-        
         </header>
-        <main class="l-main">
 
+        <main class="l-main">
+            <!-- Home -->
+            <section class="home bd-grid" id="home">
+                <div class="home__data">
+                    <h1 class="home__title">Olá, <br> sou <span class="home__title-color">Paulo Victor</span><br> Programador Full-Stack</h1>
+                    <a href="#" class="button">Contato</a>
+                </div>
+
+                <div class="home__social">
+                    <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                </div>
+
+                <div class="home__img">
+                    <img src="assets/img/" alt="Foto de perfil" width="300" height="300">
+                </div>
+
+            </section>
         </main>
+
+        <!-- About -->
+        <section class="about section" id="about">
+            <h2 class="section-title">Sobre</h2>
+
+            <div class="about__container bd-grid">
+                <div class="about__img">
+                    <img src="assets/img/perfil.jpg" alt="Sobre mim" > 
+                </div>
+            
+
+                <div>
+                    <h2 class="about__subtitle">Sou Paulo Victor</h2>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorem ut maiores ab nam tenetur libero quam, id natus enim neque modi odio maxime perferendis assumenda. Architecto eius quae harum!</p>
+                </div>
+            </div>
+        </section>
 
         <!-- Footer -->
 
