--- a/index.html
+++ b/index.html
@@ -71,6 +71,74 @@
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorem ut maiores ab nam tenetur libero quam, id natus enim neque modi odio maxime perferendis assumenda. Architecto eius quae harum!</p>
                 </div>
             </div>
+            
+        </section>
+
+        <!-- Skills -->
+        <section class="skills section" id="skills">
+           <h2 class="section-title">Habilidades</h2> 
+           <div class="skills__container bd-grid">
+                <div>
+                    <h2 class="skills_subtitle">Habilidades Profissionais</h2>
+                    <p class="skills__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus aut modi eligendi repellendus voluptate nobis. Vel, distinctio itaque assumenda ex labore iusto dolore et nostrum magnam perferendis!</p>
+
+                    <div class="skills__data">
+                        <div class="skills_names">
+                            <i class='bx bxl-html5 skills__icon'></i>
+                            <span class="skills__name">HTML5</span>
+                        </div>
+
+                        <div>
+                            <span class="skills__percentage">95%</span>
+                        </div>
+                        
+                        <div class="skills__bar skills__html"></div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills_names">
+                            <i class='bx bxl-css3 skills__icon' ></i>
+                            <span class="skills__name">CSS3</span>
+                        </div>
+
+                        <div>
+                            <span class="skills__percentage">85%</span>
+                        </div>
+
+                        <div class="skills__bar skills__css"></div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills_names">
+                            <i class='bx bxl-javascript skills__icon' ></i>
+                            <span class="skills__name">JavaScript</span>
+                        </div>
+
+                        <div>
+                            <span class="skills__percentage">65%</span>
+                        </div>
+
+                        <div class="skills__bar skills__js"></div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills_names">
+                            <i class='bx bxl-react skills__icon' ></i>
+                            <span class="skills__name">React</span>
+                        </div>
+
+                        <div>
+                            <span class="skills__percentage">0%</span>
+                        </div>
+
+                        <div class="skills__bar skills__react"></div>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                </div>
+           </div>
         </section>
 
         <!-- Footer -->
