--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 </div>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#" class="nav__link active">Início</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Sobre</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Habilidades</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Trabalhos</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Contato</a></li>
+                        <li class="nav__item"><a href="#home" class="nav__link active">Início</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">Sobre</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">Habilidades</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link">Trabalhos</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">Contato</a></li>
                     </ul>
                 </div>
                 <div class="nav__toggle" id="nav-toggle">
@@ -141,8 +141,57 @@
            </div>
         </section>
 
-        <!-- Footer -->
+        <!-- Work -->
+        <section class="work section" id="work">
+            <h2 class="section-tite">Work</h2>
 
+            <div class="work__container bd-grid">
+                <div class="work__img">
+                    <img src="assets/img/work1.jpg" alt="">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work1.jpg" alt="">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work1.jpg" alt="">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work1.jpg" alt="">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work1.jpg" alt="">
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work1.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact -->
+        <section class="contact section" id="contact">
+            <h2 class="section-title">Contato</h2>
+            <div class="contact__container bd-grid">
+                <form action="" class="contact__form">
+                    <input type="text" placeholder="Nome" class="contact__input">
+                    <input type="mail" placeholder="Email" class="contact__input">
+                    <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                    <input type="button" value="Enviar" class="contact__button button">
+                </form>
+            </div>
+
+        </section>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <p class="footer__title">Paulo Victor</p>
+            <div class="footer__social">
+                <a href="" class="footer__icon"><i class='bx bxl-github'></i></a>
+                <a href="" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+                <a href="" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="" class="footer__icon"><i class='bx bxl-whatsapp' ></i></a>
+            </div>
+            <p>&#169; 2020 todos os direitos reservados.</p>
+        </footer>
         
         <!-- Scroll Reveal -->
         <script src="https://unpkg.com/scrollreveal"></script>
