--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <!-- Work -->
         <section class="work section" id="work">
-            <h2 class="section-tite">Work</h2>
+            <h2 class="section-title">Work</h2>
 
             <div class="work__container bd-grid">
                 <div class="work__img">
